refactor: add swagger and separate router folder
